# Synopsis

./: AUTHORS  CMakeLists.txt  INSTALL  LICENSE  README.md  TODO
data/: synopsis.desktop
src/: ImageFile.vala  Synopsis.vala
